--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.scss
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.scss
@@ -255,6 +255,12 @@
   margin-top: 1px  !important;
   //padding-right: 2px !important;
 }
+.summary_bg_color_gray_blue{
+  background-color: #E5E7E9  !important;
+}
+.summary_bg_color_white{
+  background-color: #FFFFFF  !important;
+}
 
 .th{  
   height: 35px !important;
