--- a/front-end/src/app/reports/reportheader/reportheader.component.scss
+++ b/front-end/src/app/reports/reportheader/reportheader.component.scss
@@ -76,11 +76,6 @@
       }
     }
     
-    .reports__btn-container {
-      height: 100%;
-      padding: 1em;
-    }
-
     section {
       .form-content {
         .options-list {
@@ -110,11 +105,6 @@
 
   ::ng-deep a:hover {
     color:#0169a4;
-  }
-
-  .reports__btn-container {
-    height: 100%;
-    padding: 1em;
   }
 
   .reports__btn-search-filter {
@@ -159,7 +149,7 @@
   padding: 0;
   padding-right: 10px;
   margin-bottom: 15px;
-  padding-left: 5px;
+  //padding-left: 5px;
   margin-top: 15px;
   width: 100%;
   .reports__sidebar {
@@ -185,7 +175,7 @@
   .reports__container {
     padding-right: 10px;
     margin-bottom: 15px;
-    //padding-left: 5px;
+    padding-left: 5px;
     margin-top: 15px;
     .grid-row {
       margin-left: 0;
@@ -201,7 +191,7 @@
         display: block;
         margin: 0 auto;
         width: 96%;
-        //padding: .75em 0 .25em 0;
+        padding: .75em 0 .25em 0;
         @include clearfix();
         .btn-options {
           color: $shuttleGray;
@@ -219,6 +209,7 @@
     .reports__btn-container {
       height: 100%;
       //padding: 1em;
+      //padding: 1em 1em 0 1em;
     }
 
     .reports__btn-search-filter {
