Selecting the value selected from typeahead

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -80,6 +80,8 @@
                           placeholder="{{childOption.text}}"
                           type="radio"
                           [name]="secondaryOption"
+                          formControlName="secondaryOption"
+                          [(ngModel)]="transactionType"
                           [value]="childOption.value"
                           (click)="updateTypeSelected($event)"
                         />
