--- a/front-end/src/app/contacts/contacts.component.scss
+++ b/front-end/src/app/contacts/contacts.component.scss
@@ -40,8 +40,8 @@
     header {
       .header-content {
         display: block;
-        margin: 5 auto;
-        width: 96%;
+        margin: 2px auto;
+        width: 98%;
         padding: .75em 0 .25em 0;
         @include clearfix();
         .btn-options {
