--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -228,7 +228,7 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action2" class="dropdown-menu" ngbDropdownMenu>
-                            <button class="dropdown-item" (click)="viewReport(report)">
+                            <button class="dropdown-item" *ngIf="report.status === 'Filed'" (click)="viewReport(report)">
                                 <i class="fas fa-eye"></i> View
                             </button>
                             <button class="dropdown-item" (click)="amendReport(report)">
@@ -251,7 +251,7 @@
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
                         <div id="forms__trx-dropdown-action3" class="dropdown-menu" ngbDropdownMenu>
-                            <button class="dropdown-item" (click)="viewReport(report)">
+                            <button class="dropdown-item" *ngIf="report.status === 'Filed'" (click)="viewReport(report)">
                                 <i class="fas fa-eye"></i> View
                             </button>
                             <button class="dropdown-item" (click)="downloadReport(report)">
