--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -108,7 +108,7 @@
                                 && !isFieldName(col?.name, 'beneficiary_cand_id') 
                                 " class="form-control" [style.width]="col?.width" [style.height]="col?.height"
                           [attr.type]="col?.type" [attr.name]="col?.name"
-                          [attr.readonly]="isFieldName(col?.name, 'contribution_aggregate') && col.type === 'text' ? true : null"
+                          [attr.readonly]="(col.type === 'text' && col?.isReadonly) ? true : null"
                           [attr.value]="col?.value"
                           [maxlength]="(isFieldName(col?.name, 'contribution_amount') || isFieldName(col?.name, 'expenditure_amount') 
                                         || isFieldName(col?.name, 'contribution_aggregate'))? col?.validation?.max + 5: col?.validation?.max"
@@ -367,7 +367,11 @@
               placement="bottom-left" (openChange)="multipleMemoDropdownChanged($event)">
               <button class="btn btn-primary dropdown-toggle" id="jfMemoDropdown" ngbDropdownToggle>
                 <i class="plus-icon-circle" aria-hidden="true"></i>
-                Add JF Transfer Memo
+                <ng-container *ngIf="transactionType === 'DEBT_TO_VENDOR'; else jfTransferMemo">
+                  Make a Payment to Debt
+                </ng-container>
+                <ng-template #jfTransferMemo>Add JF Transfer Memo</ng-template>
+                
                 <i class="dropdown-icon" aria-hidden="true"></i>
               </button>
               <div ngbDropdownMenu aria-labelledby="jfMemoDropdown" id="jfMemoDropdown-menu">
