--- a/front-end/src/app/contacts/contacts-table/contacts-table.component.html
+++ b/front-end/src/app/contacts/contacts-table/contacts-table.component.html
@@ -15,7 +15,7 @@
 
          <th [@fadeInOut] *ngIf="isColumnVisible('name')" [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('tentityTypeype')" [class]="getSortClass('entityType')" (click)="changeSortDirection('entityType')">Entity Type
+        <th [@fadeInOut] *ngIf="isColumnVisible('entity_type')" [class]="getSortClass('entity_type')" (click)="changeSortDirection('entity_type')">Entity Type
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('id')" [class]="getSortClass('id')" (click)="changeSortDirection('id')">Entity Number
         </th>
@@ -80,7 +80,7 @@
           <input [(ngModel)]="cnt.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
         <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{cnt.name}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{cnt.type}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('entity_type')">{{cnt.entity_type}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('id')">{{cnt.id}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('canCmteId')">{{cnt.canCmteId}}</td>        
         <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{cnt.street1}} {{cnt.street2}}</td>
@@ -173,9 +173,9 @@
               <div class="col-md">
                   <div class="checkbox">
                     <label>
-                      <input [(ngModel)]="getSortableColumn('type').checked" (change)="toggleVisibility('type', $event)"
-                        type="checkbox" [disabled]="getSortableColumn('type').disabled">
-                      <span [ngClass]="{'disabled-column-option':getSortableColumn('type').disabled}">
+                      <input [(ngModel)]="getSortableColumn('entity_type').checked" (change)="toggleVisibility('entity_type', $event)"
+                        type="checkbox" [disabled]="getSortableColumn('entity_type').disabled">
+                      <span [ngClass]="{'disabled-column-option':getSortableColumn('entity_type').disabled}">
                         Entity Type
                       </span>
                     </label>
