--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -236,7 +236,7 @@
                           <div class="summary_text_level_1 summary_bg_color_gray_blue"></div>
                           <div class="summary_text_level_1 summary_bg_color_gray_blue"></div>
                           <div class="summary_text_level_1 summary_bg_color_gray_blue"></div>
-                          <div class="summary_text_level_1 summary_bg_color_white text-right"><h3>Total This Period</h3></div>
+                          <div class="summary_text_level_1 summary_bg_color_white text-right"><b>Total This Period</b></div>
                           <div class="summary_text_level_1 summary_bg_color_gray_blue text-right">{{ tab3Data['DEBTS/LOANS OWED TO COMMITTEE'] | currency:'USD':'symbol-narrow':'1.2-2' }}</div>
                           <div class="summary_text_level_1 summary_bg_color_gray_blue text-right">{{ tab3Data['DEBTS/LOANS OWED BY COMMITTEE'] | currency:'USD':'symbol-narrow':'1.2-2' }}</div>
                       </td>
@@ -253,7 +253,7 @@
                             {{ tab3Data['ENDING CASH ON HAND'] | currency:'USD':'symbol-narrow':'1.2-2' }}
                         </div>
                         <div id="level_4" class="summary_text_level_3 summary_bg_color_white text-right" >
-                          <h3>Calendar Year-to-Date</h3>
+                          <b>Calendar Year-to-Date</b>
                         </div>
                         <div id="level_5" class="summary_text_amt_level_3" >
                             {{ tab3Data['DEBTS/LOANS OWED TO COMMITTEE YTD'] | currency:'USD':'symbol-narrow':'1.2-2' }}
