--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -27,6 +27,7 @@
       .app__content-wrapper {
         padding-left: 10px;
         .app__content {
+          clear: left;
           margin-left: 50px;
           width: 95%;
         }
@@ -97,7 +98,7 @@
     .navbar {
       background-color: $dustyGray;
       height: $topNavHeight;
-      font-family: 'Roboto', 'sans-serif';
+      font-family: 'Lato', 'sans-serif';
     font-size: 1rem;
     font-weight: 400;
     color: #212121;
