--- a/front-end/src/app/shared/scss/_custom-variables.scss
+++ b/front-end/src/app/shared/scss/_custom-variables.scss
@@ -8,7 +8,7 @@ $screen-md-min: 992px;
 $screen-md-max: 1199px;
 $screen-lg-min: 1200px;
 
-$mainFontFamily: 'Roboto', sans-serif;
+$mainFontFamily: 'Lato', sans-serif;
 
 
 $sideBarWidth: 275px;
