--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -273,7 +273,7 @@
           </button>
         </div>
         <div class="grid-row__col grid-row__col--6">
-          <button type="submit" class="btn btn-submit btn-right">
+          <button type="submit" [disabled]="!editMode" class="btn btn-submit btn-right">
             Submit
           </button>
         </div>
