Routing filed reports to summary and changing the text from cancel to return to reports

--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -21,7 +21,7 @@
         type="button" 
         (click)="activeModal.close('cancel')"
         class="btn btn-secondary-gray"
-      >Cancel</button>   
+      >{{cancelTitle}}</button>   
       <button *ngIf="isShowReportExist"
       type="button" 
       (click)="activeModal.close('ReportExist')"
