remove ngModel and formControlName for Chrome type issue

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -80,11 +80,13 @@
                           placeholder="{{childOption.text}}"
                           type="radio"
                           [name]="secondaryOption"
-                          formControlName="secondaryOption"
-                          [(ngModel)]="transactionType"
+
                           [value]="childOption.value"
                           (click)="updateTypeSelected($event)"
                         />
+
+                        <!-- formControlName="secondaryOption"
+                        [(ngModel)]="transactionType" -->
                           {{ childOption.text }}
                         </label>
                         <ng-container *ngIf="childOption?.infoIcon">
