--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -100,7 +100,7 @@
           <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trx.TransactionId}}</td>
           <td [@fadeInOut] [ngClass]="trx.child ? 'parent': ''" 
               (click)="trx.child? trx.toggleChild = !trx.toggleChild: ''" *ngIf="isColumnVisible('name')">{{trx.name}}
-              <div *ngIf="trx.child" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-bottom' : 'arrow-top'"></div>
+              <div *ngIf="trx.child" class="align_right arrow" [ngClass]="trx.toggleChild ? 'arrow-top' : 'arrow-bottom'"></div>
           </td>
           <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trx.street}} {{trx.street2}}</td>
           <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{trx.city}}</td>
